tests/paczka1/fuzzy1/32928546.err
Error in line 1: 01f S511 79,2
Error in line 5: 01f A661 57,7
Error in line 17: Vo40Is S511 78,6
Error in line 18: Vo40Is S876 85,1
Error in line 19: Vo40Is S511 49,2
Error in line 13: muAtcT A716 47,6
Error in line 29: 7E7LjlVHa3 S876 53,0
